--- a/config/_default/languages.yaml
+++ b/config/_default/languages.yaml
@@ -3,8 +3,8 @@
 #   Documentation: https://wowchemy.com/docs/guide/language/
 
 # Default language
-de:
-  languageCode: "de"
+[de]
+  languageCode = "de"
   # Uncomment for multi-lingual sites, and move English content into `en` sub-folder.
   #contentDir: content/en
 
