--- a/config/_default/params.yaml
+++ b/config/_default/params.yaml
@@ -18,8 +18,8 @@ marketing:
     site_type: Person
     local_business_type: ''
     org_name: ''
-    description: 'A highly-customizable Hugo academic resume theme powered by Wowchemy website builder.'
-    twitter: 'wowchemy'
+    description: 'UKB COVID-19 Bibliothek'
+    twitter: ''
   analytics:
     google_analytics: ''
     baidu_tongji: ''
@@ -49,6 +49,7 @@ footer:
       allow_derivatives: false
       share_alike: true
       allow_commercial: false
+      i_am_a_sponsor: true
 
 # Localization
 
